// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CertificateBanner snapshot with an active certificate is passing and is downloadable 1`] = `
<Banner
  icon={[MockFunction icons.CheckCircle]}
  variant="success"
>
  This module offers a certificate.
    
  Congratulations.  Your certificate is ready.
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is passing and is earned but unavailable 1`] = `
<Banner>
  This module offers a certificate.
    
  Your grade and certificate will be ready after 10/20/3030.
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is passing and not downloadable render empty 1`] = `null`;

exports[`CertificateBanner snapshot with an active certificate is restricted 1`] = `
<Banner
  variant="danger"
>
  This module offers a certificate.
    
  Your Certificate of Achievement is being held pending confirmation that the issuance of your Certificate is in compliance with strict U.S. embargoes on Iran, Cuba, Syria, and Sudan.  If you think our system has mistakenly identified you as being connected with one of those countries, please let us know.
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is restricted and verified 1`] = `
<Banner
  variant="danger"
>
  This module offers a certificate.
    
  Your Certificate of Achievement is being held pending confirmation that the issuance of your Certificate is in compliance with strict U.S. embargoes on Iran, Cuba, Syria, and Sudan.  If you think our system has mistakenly identified you as being connected with one of those countries, please let us know.
    
  If you would like a refund on your Certificate of Achievement, please contact us.
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is restricted and verified with billing email 1`] = `
<Banner
  variant="danger"
>
  This module offers a certificate.
    
  Your Certificate of Achievement is being held pending confirmation that the issuance of your Certificate is in compliance with strict U.S. embargoes on Iran, Cuba, Syria, and Sudan.  If you think our system has mistakenly identified you as being connected with one of those countries, please let us know.
    
  <format-message-function
    message={
      {
        "defaultMessage": "If you would like a refund on your Certificate of Achievement, please contact our billing address {billingEmail}",
        "description": "Message to learners to contact billing for certificate refunds",
        "id": "learner-dash.courseCard.banners.certificateRefundContactBilling",
      }
    }
    values={
      {
        "billingEmail": <MailtoLink
          to="billing@email"
        >
          billing@email
        </MailtoLink>,
      }
    }
  />
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is restricted and verified with support and billing email 1`] = `
<Banner
  variant="danger"
>
  This module offers a certificate.
    
  <format-message-function
    message={
      {
        "defaultMessage": "Your Certificate of Achievement is being held pending confirmation that the issuance of your Certificate is in compliance with strict U.S. embargoes on Iran, Cuba, Syria, and Sudan.  If you think our system has mistakenly identified you as being connected with one of those countries, please let us know by contacting {supportEmail}.",
        "description": "Restricted certificate warning message",
        "id": "learner-dash.courseCard.banners.certificateRestricted",
      }
    }
    values={
      {
        "supportEmail": <MailtoLink
          to="suport@email"
        >
          suport@email
        </MailtoLink>,
      }
    }
  />
    
  <format-message-function
    message={
      {
        "defaultMessage": "If you would like a refund on your Certificate of Achievement, please contact our billing address {billingEmail}",
        "description": "Message to learners to contact billing for certificate refunds",
        "id": "learner-dash.courseCard.banners.certificateRefundContactBilling",
      }
    }
    values={
      {
        "billingEmail": <MailtoLink
          to="billing@email"
        >
          billing@email
        </MailtoLink>,
      }
    }
  />
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is restricted and verified with support email 1`] = `
<Banner
  variant="danger"
>
  This module offers a certificate.
    
  <format-message-function
    message={
      {
        "defaultMessage": "Your Certificate of Achievement is being held pending confirmation that the issuance of your Certificate is in compliance with strict U.S. embargoes on Iran, Cuba, Syria, and Sudan.  If you think our system has mistakenly identified you as being connected with one of those countries, please let us know by contacting {supportEmail}.",
        "description": "Restricted certificate warning message",
        "id": "learner-dash.courseCard.banners.certificateRestricted",
      }
    }
    values={
      {
        "supportEmail": <MailtoLink
          to="suport@email"
        >
          suport@email
        </MailtoLink>,
      }
    }
  />
    
  If you would like a refund on your Certificate of Achievement, please contact us.
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is restricted with billing email 1`] = `
<Banner
  variant="danger"
>
  This module offers a certificate.
    
  Your Certificate of Achievement is being held pending confirmation that the issuance of your Certificate is in compliance with strict U.S. embargoes on Iran, Cuba, Syria, and Sudan.  If you think our system has mistakenly identified you as being connected with one of those countries, please let us know.
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate is restricted with support email 1`] = `
<Banner
  variant="danger"
>
  This module offers a certificate.
    
  <format-message-function
    message={
      {
        "defaultMessage": "Your Certificate of Achievement is being held pending confirmation that the issuance of your Certificate is in compliance with strict U.S. embargoes on Iran, Cuba, Syria, and Sudan.  If you think our system has mistakenly identified you as being connected with one of those countries, please let us know by contacting {supportEmail}.",
        "description": "Restricted certificate warning message",
        "id": "learner-dash.courseCard.banners.certificateRestricted",
      }
    }
    values={
      {
        "supportEmail": <MailtoLink
          to="suport@email"
        >
          suport@email
        </MailtoLink>,
      }
    }
  />
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate not passing and audit 1`] = `
<Banner>
  This module offers a certificate.
    
  Grade required to pass the module: 0.8‏%
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate not passing and has finished 1`] = `
<Banner
  variant="warning"
>
  This module offers a certificate.
    
  You are not eligible for a certificate.
    
  <Hyperlink
    destination="progressUrl"
    isInline={true}
  >
    View grades.
  </Hyperlink>
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate not passing and is downloadable 1`] = `
<Banner
  icon={[MockFunction icons.CheckCircle]}
  variant="success"
>
  This module offers a certificate.
    
  Congratulations.  Your certificate is ready.
</Banner>
`;

exports[`CertificateBanner snapshot with an active certificate not passing and not audit and not finished 1`] = `
<Banner
  variant="warning"
>
  This module offers a certificate.
    
  Grade required for a certificate: 0.8‏%
</Banner>
`;

exports[`CertificateBanner snapshot with no active certificate has not started 1`] = `
<Banner
  variant="warning"
>
  This module does not offer a certificate.
    
  You have not started this module yet.
</Banner>
`;

exports[`CertificateBanner snapshot with no active certificate is fully completed 1`] = `
<Banner
  icon={[MockFunction icons.CheckCircle]}
  variant="success"
>
  This module does not offer a certificate.
    
  Congratulations. You have completed this module.
</Banner>
`;

exports[`CertificateBanner snapshot with no active certificate is partially completed 1`] = `
<Banner>
  This module does not offer a certificate.
    
  You have completed 30% of the module.
</Banner>
`;
